Update CRISPR_comparison submodule to current version on main branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "crispr_analyses/CRISPR_comparison"]
 	path = crispr_analyses/CRISPR_comparison
 	url = https://github.com/EngreitzLab/CRISPR_comparison.git
+	branch = main
